[package]
name = "pumpfun-laserstream-sniper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
bs64 = "0.1.2"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
helius-laserstream = "0.0.6"
lazy_static = "1.5.0"
once_cell = "1.21.3"
reqwest = "0.12.22"
serde_json = "1.0.140"
solana-client = "2.3.3"
solana-sdk = "2.3.1"
solana-transaction-status-client-types = "2.3.3"
spl-associated-token-account = "7.0.0"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
